--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.pytest.ini_options]
 addopts = "--flake8 --doctest-modules --black"
 testpaths = [
-    "web"
+    "web", "src"
 ]
 flake8-max-complexity = 10
 flake8-max-line-length = 99
